Korollar aus dem Satz von Cauchy verbessert.

--- a/skript.tex
+++ b/skript.tex
@@ -1337,7 +1337,7 @@ Aber: Wenn \(h\) ein Teiler von $\ord(G)$ ist, existiert dann auch eine Untergru
 	\begin{itemize}
 	\item["$\Rightarrow$":] Nach Lagrange gilt für jedes \(g\in G\) die Teilbarkeit \(\ord(g) \divides \ord(G)=p^n\), woraus folgt, dass $\ord(g)=p^k$ für ein \(k \leq n\) ist.
 	\item["$\Leftarrow$":] Zwecks Kontraposition sei die Ordnung von \(G\) von der Form $\ord(G)=p^\alpha q$ mit $q\neq 1$ teilerfremd zu \(p\).
-		Dann enthält \(G\) ein Element der Ordnung \(p\) für jeden Primfaktor von \(q\), somit ist die Ordnung mancher Elemente nicht von der Form $p^k$.
+		Dann existiert nach dem Satz von Cauchy für jeden Primfaktor $p'$ von \(q\) ein Element $g \in G$ mit \(\ord(g)=p'\). Somit ist die Ordnung von $g$ nicht von der Form $p^k$ im Widerspruch zur Voraussetzung.
 	\end{itemize}
 \end{proof}
 
