--- a/skript.tex
+++ b/skript.tex
@@ -918,6 +918,7 @@ wobei $i: N\to G, n\mapsto (n,e_H), p:G\to H, (n,h)\mapsto h$ ist $j:H\to G, h\m
 \end{proof}
 
 \begin{ex}
+\label{ex:semidirekt}
 
 \begin{enumerate}[label=(\alph*)]
 	\item Für einen beliebigen Körper $K$ zerfällt (bzw. spaltet)
@@ -1454,14 +1455,18 @@ Für den Beweis des dritten Teils benötigen wir folgendes Lemma:
 \underline{Anwendungen/Folgerungen des Sylow-Satzes}
 
 \begin{thm}
-	Es seien $p, q$ Primzahlen mit $p < q$ und $p \nmid q-1$. Dann ist jede Gruppe $G$ der Ordnung $pq$ eine zyklische Gruppe.
+  Es seien $p, q$ Primzahlen mit $p < q$ und $p \nmid q-1$.\footnote{Dies schließt gerade den Fall $p = 2, q = 3$ aus. Ein Isomorphietyp von Gruppen der Ordnung 6 ist nämlich $D_6$ und diese Gruppe ist nicht zyklisch. S.a. Beispiel \ref{ex:semidirekt}.} Dann ist jede Gruppe $G$ der Ordnung $pq$ eine zyklische Gruppe.
 \end{thm}
 
 \begin{proof}
-	Es sei $s$ die Anzahl der $p$-Sylowuntergruppen von $G$. Aus Teil 3 des Sylow-Satzes folgt $s \divides q, s \equiv 1 \pmod{p}$. Da $q \not \equiv 1 \pmod{p}$, muss $s = 1$ gelten, denn die Primzahl $q$ ist nur durch $1$ und $q$ teilbar. \\
-	Es gibt also eine einzige $p$-Sylowuntergruppe $S$ von $G$. Aus Teil 2 des Sylow-Satzes folgt $gSg^{-1} = S$ für alle $g \in G$. Somit ist $S$ eine normale Untergruppe. \\ %FIXME Wozu den zweiten Sylowsatz. Die Aussage sollte eigentlich direkt daraus folgen, dass die Konjugation als ein Isomorphismus die Gruppenordnung unverändert lässt. Eventueller Fix betrifft dann auch die Aussage im thm. zur einfachen Gruppe der Ordnung 30
-	Für die Anzahl $r$ der $q$-Sylowuntergruppen gilt: $r \divides p$ und $r \equiv 1 \pmod{q}$. Wenn $r = p$, dann gilt $r = p \not = 1 \pmod{q}$ (wegen $p < q$). Dies ist also nicht möglich. Es gilt dann $r = 1$. Es existiert genau eine $q$-Sylowuntergruppe $R$ von $G$ und $R$ ist deswegen ein Normalteiler von $G$. Da $S$ und $R$ normal sind, ist $SR = \{ ab : a \in S, b \in R\}$ eine normale Untergruppe. \\
-	$S \cap R = \{ e\}$ (die Elemente müssen Ordnung $1$ haben). Dies ergibt, dass $SR$ das (innere) direkte Produkt von $S$ und $R$ ist. Insbesondere gilt $|SR| = |S \times R| = |S||R| = pq = |G|$. Folglich gilt $G = S \times R$. Man zeigt dann, $G = \langle ab \rangle \text{ mit } \langle a \rangle = S, \langle b \rangle = R$ zyklisch.
+	Es sei $s$ die Anzahl der $p$-Sylowuntergruppen von $G$. Aus Teil 3 des Sylow-Satzes folgt $s \divides q$ und $s \equiv 1 \pmod{p}$. Da $q \not \equiv 1 \pmod{p}$, muss $s = 1$ gelten, denn die Primzahl $q$ ist nur durch $1$ und $q$ teilbar. 
+
+	Es gibt also eine einzige $p$-Sylowuntergruppe $S$ von $G$. Aus Teil 2 des Sylow-Satzes folgt $gSg^{-1} = S$ für alle $g \in G$. Somit ist $S$ eine normale Untergruppe. %FIXME Wozu den zweiten Sylowsatz. Die Aussage sollte eigentlich direkt daraus folgen, dass die Konjugation als ein Isomorphismus die Gruppenordnung unverändert lässt. Eventueller Fix betrifft dann auch die Aussage im thm. zur einfachen Gruppe der Ordnung 30
+	Für die Anzahl $r$ der $q$-Sylowuntergruppen gilt: $r \divides p$ und $r \equiv 1 \pmod{q}$. Wenn $r = p$, dann gilt $r = p \not = 1 \pmod{q}$ (wegen $p < q$). Dies ist also nicht möglich. Es gilt dann $r = 1$. Es existiert genau eine $q$-Sylowuntergruppe $R$ von $G$ und $R$ ist deswegen ein Normalteiler von $G$. Da $S$ und $R$ normal sind, ist $SR = \{ ab : a \in S, b \in R\}$ eine normale Untergruppe. 
+
+	Es gilt $S \cap R = \{ e\}$ (die Elemente müssen Ordnung $1$ haben). Dies ergibt, dass $SR$ das (innere) direkte Produkt von $S$ und $R$ ist. Insbesondere gilt $|SR| = |S \times R| = |S||R| = pq = |G|$. Folglich gilt $G = SR \cong S \times R$. 
+
+        Wir zeigen nun $G = \langle ab \rangle$. Dazu sei $S =  \langle a \rangle$ und $R =  \langle b \rangle$. Es gilt $ (ab)^{pq} = (a^p)^q (b^q)^p = e$ und damit $\ord(ab) \divides pq$. Da $p$ und $q$ teilerfremde Primzahlen sind folgt $ (ab)^p = a^p b^p = b^p \neq e$ und  $(ab)^q = a^q b^q = a^q \neq e$. Also gilt $\ord(ab) = pq$.
 \end{proof}
 
 % VL 16.06.
