Zweite Folgerung aus Sylowsatz gerichtet

--- a/skript.tex
+++ b/skript.tex
@@ -1477,7 +1477,7 @@ Für den Beweis des dritten Teils benötigen wir folgendes Lemma:
 \begin{proof}
 	Es ist $|G| = 30 = 2\cdot 3\cdot 5$. Es seien $s$ die Anzahl der 5-Sylowuntergruppen und $t$ die der 3-Sylowuntergruppen. Angenommen, $G$ sei einfach. Dann gilt: $s>1$ und $t>1$, denn mit $s=1$ (bzw. $t=1$) wäre die 5-Sylowuntergruppe (bzw. 3-Sylowuntergruppe) normal wegen Konjugiertheit der Sylowgruppen zueinander (Teil 2 im Satz). Aus Teil (3) folgt
 		\[ s \divides 6,\; s\equiv 1(5)\Rightarrow s=6.\]
-	Also gibt es 6 verschiedene 5-Sylowuntergruppen, jede davon hat Ordnung $5$. Da die 5-Sylowuntergruppen zyklisch sind, haben sie paarweise nur einen trivialen Schnitt. Damit enthalten die 5-Sylowuntergruppen zusammen $6\cdot 4 =24$ Elemente und das neutrale Element. Analog gilt für $t$
+	Also gibt es 6 verschiedene 5-Sylowuntergruppen, jede davon hat Ordnung $5$. Da die 5-Sylowuntergruppen Primzahlordnung haben und damit insbesondere zyklisch sind, haben sie paarweise nur einen trivialen Schnitt. Damit enthalten die 5-Sylowuntergruppen zusammen $6\cdot 4 =24$ Elemente und das neutrale Element. Analog gilt für $t$
 		\[ t \divides 10,\; t\equiv 1(3) \Rightarrow t=10.\]
 	Damit enthalten die 3-Sylowuntergruppen $10\cdot 2=20$ Elemente und das neutrale Element. Die nichttrivialen Elemente der 3-Sylowuntergruppen sind von denen der 5-Sylowuntergruppen verschieden, denn das einzige Element, dessen Ordnung sowohl 5 als auch 3 teilt, ist das neutrale.
 	
