--- a/skript.tex
+++ b/skript.tex
@@ -81,7 +81,7 @@
 
 % Um neu definierte Bezeichnungen hervorzuheben
 % ZZ haben wir noch einen Mix aus \underline und \emph
-\newcommand{\defi}{\underline}
+\newcommand{\defi}{\emph}
 
 % TODO Bspw. ord wird zZ als drei Variablen (o, r, d) gesetzt. Zu einem vernünftigen Operator ändern?
 	% Ich fang einfach mal damit an. -- Peter
@@ -158,7 +158,7 @@
 
 \begin{lemma}
 	\begin{enumerate}
-	\item $\inv{\Inv{a}}=a$, $\inv{ab}=\Inv b\Inv a$ % TODO Eigentlich braucht man für beides hier die Eindeutigkeit, welche unten gezeigt wird. Umsortieren?
+	\item $\inv{\Inv{a}}=a$, $\inv{ab}=\Inv b\Inv a$
 	\item $ab=ac$ impliziert $b=c$ für alle $a,b,c\in G$.
 	\item Für $a,b\in G$ gibt es genau ein $x\in G$, sodass $ax=b$.
 	\end{enumerate}
@@ -1387,7 +1387,7 @@ Aber: Wenn \(h\) ein Teiler von $\ord(G)$ ist, existiert dann auch eine Untergru
 \end{enumerate}
 \end{proof}
 
-\begin{kor}
+\begin{kor}\label{kor:SylowUGkonj}
 	Die $p$-Sylowuntergruppen bilden eine Klasse von konjugierten Untergruppen von $G$.
 \end{kor}
 
@@ -1405,7 +1405,7 @@ Wie bestimmt man die Anzahl der zu einer gegebenen Untergruppe konjugierten Unte
 Es sei $\mathcal{U}$ die Menge aller Untergruppen von \(G\) und $G \times \mathcal{U} \rightarrow \mathcal{U}, (g , H) \mapsto g \cdot H := gHg^{-1}$ eine Gruppenoperation.
 
 \begin{defn}
-	Der Stabilisator einer Untergruppe $H$ von $G$ unter dieser Operation heißt \emph{Normalisator} von $H$: $N_G(H) = \{ g \in G: gHg^{-1} = H \}$.
+	Der Stabilisator einer Untergruppe $H$ von $G$ unter dieser Operation heißt \defi{Normalisator} von $H$: $N_G(H) = \{ g \in G: gHg^{-1} = H \}$.
 	Die zu $H$ konjugierten Untergruppen bilden die Bahn $G \cdot H$ von $H$.
 	Es gilt also $$|G \cdot H| = | \{ gHg^{-1} \in \mathcal{U} : g \in G \} | = [G:N_G(H)].$$
 	Für eine endliche Gruppe $G$ ist diese Anzahl immer ein Teiler von $|G|$.
@@ -1414,7 +1414,8 @@ Es sei $\mathcal{U}$ die Menge aller Untergruppen von \(G\) und $G \times \mathc
 Für den Beweis des dritten Teils benötigen wir folgendes Lemma:
 
 \begin{lemma}\label{lem:Sylow}
-	Sei $T$ eine $p$-Sylowuntergruppe von $G$ und $H$ eine $p$-Untergruppe. Wenn $H \subseteq N_G(T)$ gilt, gilt bereits $H \subseteq T$.
+	Sei $T$ eine $p$-Sylowuntergruppe von $G$ und $H$ eine $p$-Untergruppe.
+	Wenn $H \subseteq N_G(T)$ gilt, gilt bereits $H \subseteq T$.
 \end{lemma}
 
 \begin{proof}
@@ -1427,24 +1428,30 @@ Für den Beweis des dritten Teils benötigen wir folgendes Lemma:
 \end{proof}
 
 \begin{proof}[Beweis des dritten Teils des Sylow-Satzes]
-	Sei $X$ die Menge aller $p$-Sylowuntergruppen von $G$, $S \in X$ beliebig (Existenz: siehe Teil 1), $s := |X|$. Es gilt $s = [G:N_G(S)]$. \\
+	Sei $X$ die Menge aller $p$-Sylowuntergruppen von $G$, $S \in X$ beliebig (Existenz: siehe Teil 1), $s := |X|$.
+	Es gilt $s = [G:N_G(S)]$, da \(X = G\cdot S\) nach Korollar~\ref{kor:SylowUGkonj} die Bahn einer beliebigen \(p\)-Sylowuntergruppe ist.
 	Aus der Inklusionskette $S \subseteq N_G(S) \subseteq G$ folgt
-	$$[N_G(S):S] [G:N_G(S)] = [G:S] \Leftrightarrow [N_G(S):S] s = q \text{, d.h. } s \divides q.$$
+	$$[N_G(S):S] [G:N_G(S)] = [G:S] \Leftrightarrow [N_G(S):S] s = q,$$
+	also die Teilbarkeit \(s | q\).
 	Wir lassen $S$ wie folgt auf X operieren:
 	$$S \times X \rightarrow X, (g, T) \mapsto gTg^{-1}.$$
-	$S \in X$ ist ein Fixpunkt dieser Operation. Wir möchten zeigen, dass dieser der einzige Fixpunkt ist. Da $S$ eine $p$-Gruppe ist, gilt dann: $s = |X| = |X^S| = 1 \pmod{p}$ (was zu zeigen war).
+	$S \in X$ ist ein Fixpunkt dieser Operation.
+	Wir möchten zeigen, dass dieser der einzige Fixpunkt ist.
+	Da $S$ eine $p$-Gruppe ist, gilt dann: $s = |X| \equiv |X^S| = 1 \pmod{p}$ (was zu zeigen war).
 	\begin{align*}
 		T \in X^S &\Leftrightarrow &gTg^{-1} = T \text{ für alle } g \in S \\
 		&\Leftrightarrow &g \in N_G(T) \text{ für alle } g \in S \\
 		&\Leftrightarrow &S \subseteq N_G(T)
 	\end{align*}
-	Aus $S \subseteq N_G(T)$ folgt mit Lemma~\ref{lem:Sylow}, dass $S \subseteq T$ und somit $S = T$ (da $|S| = |T| = p^n$). $S \in X$ ist damit der einzige Fixpunkt.
+	Aus $S \subseteq N_G(T)$ folgt mit Lemma~\ref{lem:Sylow}, dass $S \subseteq T$ und somit $S = T$ (da $|S| = |T| = p^n$).
+	$S \in X$ ist damit der einzige Fixpunkt.
 \end{proof}
 
 \underline{Anwendungen/Folgerungen des Sylow-Satzes}
 
 \begin{thm}
-	Es seien $p, q$ Primzahlen mit $p < q$ und $p \nmid q-1$. Dann ist jede Gruppe $G$ der Ordnung $pq$ eine zyklische Gruppe.
+	Es seien $p, q$ Primzahlen mit $p < q$ und $p \nmid q-1$.
+	Dann ist jede Gruppe $G$ der Ordnung $pq$ eine zyklische Gruppe.
 \end{thm}
 
 \begin{proof}
